@@ -2,7 +2,7 @@
 # BEGINNING OF SEPARATE COPYRIGHT MATERIAL vim: ft=config sw=4 noet nocin nosi
 # =============================================================================
 # 
-# @(#) $RCSfile: acinclude.m4,v $ $Name:  $($Revision: 0.9.2.66 $) $Date: 2006/10/12 10:23:53 $
+# @(#) $RCSfile: acinclude.m4,v $ $Name:  $($Revision: 0.9.2.67 $) $Date: 2006/10/27 23:04:10 $
 #
 # -----------------------------------------------------------------------------
 #
@@ -47,7 +47,7 @@
 #
 # -----------------------------------------------------------------------------
 #
-# Last Modified $Date: 2006/10/12 10:23:53 $ by $Author: brian $
+# Last Modified $Date: 2006/10/27 23:04:10 $ by $Author: brian $
 #
 # =============================================================================
 
@@ -334,7 +334,7 @@ AC_DEFUN([_INET_CONFIG_KERNEL], [dnl
 	    CFLAGS="$CFLAGS -Werror-implicit-function-declaration"
 	    AC_COMPILE_IFELSE([
 		AC_LANG_PROGRAM([[
-#include <linux/config.h>
+#include <linux/autoconf.h>
 #include <linux/version.h>
 #include <net/ip.h>
 #include <net/icmp.h>
@@ -353,7 +353,7 @@ AC_DEFUN([_INET_CONFIG_KERNEL], [dnl
 			  linux/slab.h linux/security.h linux/snmp.h net/xfrm.h net/dst.h \
 			  net/request_sock.h], [:], [:], [
 #include <linux/compiler.h>
-#include <linux/config.h>
+#include <linux/autoconf.h>
 #include <linux/version.h>
 #include <linux/module.h>
 #include <linux/init.h>
@@ -374,7 +374,7 @@ AC_DEFUN([_INET_CONFIG_KERNEL], [dnl
 #include <linux/sched.h>
     ])
     _LINUX_CHECK_TYPES([struct sockaddr_storage], [], [], [
-#include <linux/config.h>
+#include <linux/autoconf.h>
 #include <linux/version.h>
 #include <linux/types.h>
 #include <linux/net.h>
@@ -387,7 +387,7 @@ AC_DEFUN([_INET_CONFIG_KERNEL], [dnl
     _LINUX_CHECK_FUNCS([rcu_read_lock dst_output dst_mtu ip_dst_output \
 			ip_route_output_key __in_dev_get_rcu synchronize_net], [], [], [
 #include <linux/compiler.h>
-#include <linux/config.h>
+#include <linux/autoconf.h>
 #include <linux/version.h>
 #include <linux/types.h>
 #include <linux/module.h>
@@ -412,7 +412,7 @@ AC_DEFUN([_INET_CONFIG_KERNEL], [dnl
 			struct inet_protocol,
 			struct net_protocol], [:], [:], [
 #include <linux/compiler.h>
-#include <linux/config.h>
+#include <linux/autoconf.h>
 #include <linux/version.h>
 #include <linux/types.h>
 #include <linux/module.h>
@@ -438,7 +438,7 @@ AC_DEFUN([_INET_CONFIG_KERNEL], [dnl
     ])
     _LINUX_CHECK_MACROS([rcu_read_lock], [], [], [
 #include <linux/compiler.h>
-#include <linux/config.h>
+#include <linux/autoconf.h>
 #include <linux/version.h>
 #include <linux/module.h>
 #include <linux/init.h>
@@ -466,7 +466,7 @@ AC_DEFUN([_INET_CONFIG_KERNEL], [dnl
 			  struct net_protocol.no_policy,
 			  struct dst_entry.path,
 			  struct dst_entry.path], [], [], [
-#include <linux/config.h>
+#include <linux/autoconf.h>
 #include <linux/version.h>
 #include <linux/types.h>
 #include <linux/net.h>
@@ -539,7 +539,7 @@ dnl 	])
 		AC_COMPILE_IFELSE([
 		    AC_LANG_PROGRAM([[
 #include <linux/compiler.h>
-#include <linux/config.h>
+#include <linux/autoconf.h>
 #include <linux/version.h>
 #include <linux/module.h>
 #include <linux/init.h>
@@ -566,7 +566,7 @@ dnl 	])
 	AC_CACHE_CHECK([for kernel __ip_select_ident with 2 arguments], [linux_cv_have___ip_select_ident_2_args], [dnl
 	    AC_COMPILE_IFELSE([
 		AC_LANG_PROGRAM([[
-#include <linux/config.h>
+#include <linux/autoconf.h>
 #include <linux/version.h>
 #include <linux/types.h>
 #include <linux/net.h>
@@ -591,7 +591,7 @@ dnl 	])
 	AC_CACHE_CHECK([for kernel __ip_select_ident with 3 arguments], [linux_cv_have___ip_select_ident_3_args], [dnl
 	    AC_COMPILE_IFELSE([
 		AC_LANG_PROGRAM([[
-#include <linux/config.h>
+#include <linux/autoconf.h>
 #include <linux/version.h>
 #include <linux/types.h>
 #include <linux/net.h>
@@ -624,7 +624,7 @@ dnl 	fi
 	AC_CACHE_CHECK([for kernel skb_linearize with 1 argument], [linux_cv_have_skb_linearize_1_arg], [dnl
 	    AC_COMPILE_IFELSE([
 		AC_LANG_PROGRAM([[
-#include <linux/config.h>
+#include <linux/autoconf.h>
 #include <linux/version.h>
 #include <linux/types.h>
 #include <linux/skbuff.h>]],
@@ -643,7 +643,7 @@ dnl 	fi
 	    AC_CHECK_MEMBER([struct inet_protocol.protocol],
 		[linux_cv_inet_protocol_style='old'],
 		[:], [
-#include <linux/config.h>
+#include <linux/autoconf.h>
 #include <linux/version.h>
 #include <linux/types.h>
 #include <linux/net.h>
@@ -655,7 +655,7 @@ dnl 	fi
 	    AC_CHECK_MEMBER([struct inet_protocol.no_policy],
 		[linux_cv_inet_protocol_style='new'],
 		[:], [
-#include <linux/config.h>
+#include <linux/autoconf.h>
 #include <linux/version.h>
 #include <linux/types.h>
 #include <linux/net.h>
@@ -667,7 +667,7 @@ dnl 	fi
 	    AC_CHECK_MEMBER([struct dst_entry.path],
 		[linux_cv_dst_entry_path='yes'],
 		[linux_cv_dst_entry_path='no'], [
-#include <linux/config.h>
+#include <linux/autoconf.h>
 #include <linux/version.h>
 #include <linux/types.h>
 #include <linux/net.h>
@@ -714,7 +714,7 @@ dnl 	fi
 	    AC_DEFINE([HAVE_STRUCT_SOCKADDR_STORAGE], [1], [Most 2.4
 		kernels do not define struct sockaddr_storage.  Define to 1 if
 		your kernel supports struct sockaddr_storage.])], [:], [
-#include <linux/config.h>
+#include <linux/autoconf.h>
 #include <linux/version.h>
 #include <linux/types.h>
 #include <linux/net.h>
@@ -738,7 +738,7 @@ dnl
 			  struct sock.protinfo.af_inet.ttl,
 			  struct sock.protinfo.af_inet.uc_ttl,
 			  struct sock.tp_pinfo.af_sctp], [], [], [
-#include <linux/config.h>
+#include <linux/autoconf.h>
 #include <linux/version.h>
 #include <linux/types.h>
 #include <linux/net.h>
@@ -773,7 +773,7 @@ dnl
 						    undefined for either the transitional Linux 2.6
 						    or older Linux 2.4 socket structure.])], [
 #include <linux/compiler.h>
-#include <linux/config.h>
+#include <linux/autoconf.h>
 #include <linux/version.h>
 #include <linux/types.h>
 #include <linux/module.h>
@@ -788,7 +788,7 @@ dnl
 						    style struct sock.  Otherwise leave undefined
 						    for the new Linux 2.6 struct sock.])], [
 #include <linux/compiler.h>
-#include <linux/config.h>
+#include <linux/autoconf.h>
 #include <linux/version.h>
 #include <linux/module.h>
 #include <linux/init.h>
@@ -800,7 +800,7 @@ dnl
     _LINUX_CHECK_MEMBERS([struct sock.sk_localroute,
 			  struct sock.sk_debug], [], [], [
 #include <linux/compiler.h>
-#include <linux/config.h>
+#include <linux/autoconf.h>
 #include <linux/version.h>
 #include <linux/module.h>
 #include <linux/init.h>
@@ -814,7 +814,7 @@ dnl
 			   tcp_set_skb_tso_segs,
 			   tcp_set_skb_tso_factor], [], [])
     _LINUX_CHECK_FUNCS([inet_csk], [], [], [
-#include <linux/config.h>
+#include <linux/autoconf.h>
 #include <linux/version.h>
 #include <linux/types.h>
 #include <linux/net.h>
@@ -830,7 +830,7 @@ dnl
 	AC_CACHE_CHECK([for kernel function tcp_set_skb_tso_segs with sock argument], [linux_cv_tcp_set_skb_tso_segs_sock], [
 	    AC_COMPILE_IFELSE([
 		AC_LANG_PROGRAM([[
-#include <linux/config.h>
+#include <linux/autoconf.h>
 #include <linux/version.h>
 #include <linux/types.h>
 #include <linux/net.h>
