@@ -1,3 +1,7 @@
+2006-10-27  Brian Bidulock  <bidulock@openss7.org>
+
+	* acinclude.m4: change linux/config.h to autoconf.h for 2.6.18
+
 2006-10-21  Brian Bidulock  <bidulock@openss7.org>
 
 	* strinet.lsm.in: updated streams release number
